# js-beautify-rs

./: .gitignore  AKAMAI_RESEARCH.md  AST_ARCHITECTURE.md  Cargo.toml  DELIVERABLES_INDEX.md  IMPROVEMENTS.md  LICENSE.md  NEXT_STEPS.md  OBFUSCATION_TECHNIQUES.md  PATTERNS.md  PHASE6_PROGRESS.md  PROGRESS.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  RESEARCH_VALIDATION.md  ROADMAP.md  SESSION_SUMMARY.md  STATUS.md  SUMMARY.md  instructions.md  rustfmt.toml
.sisyphus/: boulder.json
.sisyphus/evidence/: cff-audit-F1.md  cff-review-F2.md  cff-unflattener-metrics.md  cff-unflattener-qa-F3.md  cff-unflattener-v7.js
.sisyphus/notepads/cff-unflattener/: learnings.md
.sisyphus/notepads/omo-memory-system/: learned.md
.sisyphus/plans/: cff-unflattener.md  cff-v2-deep-clean.md  cff-v3-deep-clean.md  cff-v3-findings.md  cff-v4-compound-propagation.md  cff-v5-dead-var-sweep.md  omo-memory-system.md
examples/: deobfuscate.rs
research/: information.md
research/cff-v4/: .gitignore  01-chisel-trace-informed.txt  03-banescu-resilience.txt  04-vb2023-cff.txt  06-vm-deobf.txt  07-synth-symexec.txt  08-opaque-predicates.txt  09-android-native.txt  10-jsimplifier-ndss26.txt  12-auto-simplify-js.txt  13-safe-deobs.txt  14-invoke-deobf.txt  16-cmu-dataflow.txt  17-advanced-binary-deobf.txt  18-schloegel-dissertation.txt  20-hexrays-virt.txt  21-browser-fp-survey-2024.txt  22-server-fp-ucsd.txt  23-browser-polygraph-imc2024.txt  26-jsldr-ccs19.txt  27-llm-deobf-bench.txt  30-cascade-google-v2.txt  download.sh
src/: beautifier.rs  bun_extract.rs  chunk_detector.rs  chunk_splitter.rs  lib.rs  options.rs  output.rs  sourcemap.rs  token.rs  tokenizer.rs  webpack_module_extractor.rs
src/ast_deobfuscate/: akamai.rs  algebraic_simplify.rs  apply_call_simplifier.rs  array_coerce_fold.rs  array_unpack.rs  boolean_literals.rs  bun_alphabet.rs  bun_module_annotator.rs  call_proxy.rs  call_this_simplifier.rs  cff_unflattener.rs  comma_return_simplifier.rs  concat_canonicaliser.rs  constant_folding.rs  control_flow_unflatten.rs  dead_code.rs  dead_var_elimination.rs  decoder_inline.rs  deterministic_rename.rs  dispatch_inliner.rs  dispatcher_detector.rs  dispatcher_inline.rs  dowhile_switch_cleaner.rs  dowhile_switch_detector.rs  dyn_concat_resolver.rs  dynamic_property.rs  empty_statement_cleanup.rs  encrypted_eval.rs  esbuild_helper.rs  expression_simplify.rs  fromcharcode_fold.rs  function_inline.rs  iife_unwrap.rs  json_parse_eval.rs  lookup_forwarder.rs  method_call_forwarder.rs  mod.rs  multi_var_split.rs  nullish_coalescing_simplifier.rs  object_sparsing.rs  (+19 more)
src/beautifier/: asi.rs  flags.rs  handlers.rs  helpers.rs  mod.rs  tests.rs  webpack.rs
src/cross_version/: ast_matcher.rs  canonical_namer.rs  mod.rs  sourcemap_parser.rs
src/deobfuscate/: algebraic_simplify.rs  array_unpack.rs  boolean_literals.rs  call_proxy.rs  constant_folding.rs  control_flow.rs  dead_code.rs  dead_code_removal.rs  dead_var_elimination.rs  decoder.rs  dynamic_property.rs  expression_simplify.rs  function_inline.rs  inline_strings.rs  mod.rs  object_dispatcher.rs  object_sparsing.rs  operator_proxy.rs  oxc_optimize.rs  rotation.rs  simplify.rs  strength_reduction.rs  string_array.rs  ternary.rs  try_catch.rs  unicode_mangling.rs  void_replacer.rs
src/oxc_opts/: cse.rs  loop_unroll.rs  mod.rs  state.rs
tests/: integration_test.rs  real_samples_test.rs
tests/fixtures/obfuscated/: control_flow_switch.js  real_bundle_sample.js  simple_string_array.js  simplify_expressions.js  string_array_with_offset.js
