[package]
name = "js-beautify-rs"
version = "0.1.0"
edition = "2024"
description = "A fast JavaScript beautifier and deobfuscator powered by oxc"
license = "MIT"
repository = "https://github.com/coleleavitt/js-beautify-rs"
keywords = ["javascript", "beautifier", "deobfuscator", "webpack", "oxc"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
needless_pass_by_ref_mut = "allow"
needless_lifetimes = "allow"
unused_self = "allow"
multiple_crate_versions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
float_cmp = "allow"
significant_drop_tightening = "allow"

[dependencies]
regex = "1"
lazy_static = "1.4"
thiserror = "2.0.17"
base64 = "0.22"
rc4 = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
oxc_allocator = { git = "https://github.com/oxc-project/oxc.git", rev = "367f730a7" }
oxc_ast = { git = "https://github.com/oxc-project/oxc.git", rev = "367f730a7" }
oxc_parser = { git = "https://github.com/oxc-project/oxc.git", rev = "367f730a7" }
oxc_semantic = { git = "https://github.com/oxc-project/oxc.git", rev = "367f730a7" }
oxc_span = { git = "https://github.com/oxc-project/oxc.git", rev = "367f730a7" }
oxc_syntax = { git = "https://github.com/oxc-project/oxc.git", rev = "367f730a7" }
oxc_traverse = { git = "https://github.com/oxc-project/oxc.git", rev = "367f730a7" }
oxc_codegen = { git = "https://github.com/oxc-project/oxc.git", rev = "367f730a7" }
oxc_cfg = { git = "https://github.com/oxc-project/oxc.git", rev = "367f730a7" }
clap = { version = "4.5.57", features = ["derive"] }
