[package]
name = "js-beautify-rs"
version = "0.1.0"
edition = "2024"
description = "A fast JavaScript beautifier and deobfuscator powered by oxc"
license = "MIT"
repository = "https://github.com/coleleavitt/js-beautify-rs"
keywords = ["javascript", "beautifier", "deobfuscator", "webpack", "oxc"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
needless_pass_by_ref_mut = "allow"
needless_lifetimes = "allow"
unused_self = "allow"
multiple_crate_versions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
float_cmp = "allow"
significant_drop_tightening = "allow"

[dependencies]
regex = "1"
lazy_static = "1.4"
thiserror = "2.0.17"
base64 = "0.22"
rc4 = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
oxc_allocator = { path = "../../forks/oxc/crates/oxc_allocator" }
oxc_ast = { path = "../../forks/oxc/crates/oxc_ast" }
oxc_ast_visit = { path = "../../forks/oxc/crates/oxc_ast_visit" }
oxc_parser = { path = "../../forks/oxc/crates/oxc_parser" }
oxc_semantic = { path = "../../forks/oxc/crates/oxc_semantic" }
oxc_span = { path = "../../forks/oxc/crates/oxc_span" }
oxc_syntax = { path = "../../forks/oxc/crates/oxc_syntax" }
oxc_traverse = { path = "../../forks/oxc/crates/oxc_traverse" }
oxc_codegen = { path = "../../forks/oxc/crates/oxc_codegen" }
oxc_cfg = { path = "../../forks/oxc/crates/oxc_cfg" }
clap = { version = "4.5.57", features = ["derive"] }
md5 = "0.7"
