[package]
name = "js-beautify-rs"
version = "0.1.0"
edition = "2024"
autobins = false
description = "A fast JavaScript beautifier and deobfuscator powered by oxc"
license = "MIT"
repository = "https://github.com/coleleavitt/js-beautify-rs"
readme = "README.md"
keywords = ["javascript", "beautifier", "deobfuscator", "webpack", "oxc"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
    "research/",
    "instructions.md",
    "SESSION_SUMMARY.md",
    "PHASE6_PROGRESS.md",
    "QUICK_REFERENCE.md",
    "IMPROVEMENTS.md",
    "AST_ARCHITECTURE.md",
    "tests/",
    "examples/",
    ".idea/",
    ".ruff_cache/",
    "src/bin/test_ast_deob.rs",
    "src/bin/test_oxc_parse.rs",
]

[[bin]]
name = "jsbeautify"
path = "src/bin/jsbeautify.rs"

[lints.rust]
rust_2018_idioms = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
needless_pass_by_ref_mut = "allow"
needless_lifetimes = "allow"
unused_self = "allow"
multiple_crate_versions = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
float_cmp = "allow"
significant_drop_tightening = "allow"

[dependencies]
regex = "1"
lazy_static = "1.4"
thiserror = "2.0.17"
base64 = "0.22"
rc4 = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustc-hash = "2"
oxc_allocator = "0.124.0"
oxc_ast = "0.124.0"
oxc_ast_visit = "0.124.0"
oxc_parser = "0.124.0"
oxc_semantic = "0.124.0"
oxc_span = "0.124.0"
oxc_syntax = "0.124.0"
oxc_traverse = "0.124.0"
oxc_codegen = "0.124.0"
oxc_cfg = "0.124.0"
clap = { version = "4.5.57", features = ["derive"] }
md5 = "0.7"
